--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <!-- Hero Title -->
             <h1 class="main-title">Appium Explained</h1>
             <!-- Sub Title -->
-            <h2 class="sub-title">Learn Mobile Test Automation with Appium and WebdriverIO<br>Sign up now and receive the first four lessons completely free.</h2>
+            <h2 class="sub-title"><span>Learn Mobile Test Automation with Appium and WebdriverIO<br>Sign up now and receive the first four lessons completely free.</span></h2>
 
             <!-- Mailchimp Subscribe form -->
 
